Fix vertical-align of table cells
The superscript in R<sup>n</sup>RS messes with the default vertical
alignment of "middle".

--- a/www/style.css
+++ b/www/style.css
@@ -17,6 +17,11 @@ th {
   text-align: left;
 }
 
+th,
+td {
+  vertical-align: baseline;
+}
+
 #logo {
   font-family: serif;
   font-style: italic;
